Some errors fixed on mobile

--- a/src/assets/scss/_product-gallery.scss
+++ b/src/assets/scss/_product-gallery.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   .image {
+    width: 100%;
     &.is-circled {
       border-radius: 50%;
     }
@@ -15,6 +16,9 @@
   .main-product-gallery {
     cursor: zoom-in;
     margin: 0;
+    .image {
+      width: 100%;
+    }
     &:first-child {
       grid-column: span 4;
     }
